--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "OpenCaption",
-  "description": "This is the best extension you can ever get!",
+  "name": "MyCao",
+  "description": "The dogão extenstion",
   "version": "0.0.1",
   "browser_action": {
     "default_icon": "icon.png"
@@ -9,10 +9,10 @@
   "content_scripts": [
     {
       "matches": [
-        "https://youtube.com/watch*",
-        "https://www.youtube.com/watch*"
+        "https://facebook.com/*",
+        "https://www.facebook.com/*"
       ],
-      "js": ["lib/umbrella.min.js", "src/opencaption.js"],
+      "js": ["lib/umbrella.min.js", "src/mycao.js"],
       "run_at": "document_end"
     }
   ]
